--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-project-message": "^9.5",
         "drupal/core-recommended": "^9.5",
         "drupal/next": "^1.6",
+        "drupal/paragraphs": "^1.15",
         "drush/drush": "^11.5"
     },
     "conflict": {
