Install gin admin theme and change frontpage

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "drupal/core-composer-scaffold": "^9.5",
         "drupal/core-project-message": "^9.5",
         "drupal/core-recommended": "^9.5",
+        "drupal/gin": "^3.0@rc",
+        "drupal/gin_toolbar": "^1.0@rc",
         "drupal/next": "^1.6",
         "drupal/paragraphs": "^1.15",
         "drush/drush": "^11.5"
