--- a/common/config/gin.settings.yml
+++ b/common/config/gin.settings.yml
@@ -15,11 +15,11 @@ third_party_settings:
 preset_accent_color: green
 preset_focus_color: green
 enable_darkmode: '1'
-classic_toolbar: horizontal
+classic_toolbar: vertical
 secondary_toolbar_frontend: true
 high_contrast_mode: false
 accent_color: ''
 focus_color: ''
 layout_density: default
-show_description_toggle: false
+show_description_toggle: true
 show_user_theme_settings: false
