Json menu items module for enabling menu fetch in NextJs

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "drupal/gin": "^3.0@rc",
         "drupal/gin_toolbar": "^1.0@rc",
         "drupal/jsonapi_extras": "^3.23",
+        "drupal/jsonapi_menu_items": "^1.2",
+        "drupal/jsonapi_resources": "^1.0@beta",
         "drupal/next": "^1.6",
         "drupal/paragraphs": "^1.15",
         "drupal/structure_sync": "^2.0",
